# backMess

./: .env  .gitignore  1.py  alembic.ini  all_code_snapshot.txt  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 09367485313c_create_chats_and_chat_members_tables.py  9646b7c1a392_create_chats_and_chat_members_.py  d8f6906365bb_initial.py  df2a85dde8d8_create_chats_and_chat_members_.py  fe79c3cc3560_add_contact_and_contact_request_models.py
app/: config.py  database.py  main.py
app/api/routes/: __init__.py  chat.py  contact.py  user.py  websocket.py
app/crud/: __init__.py  chat.py  contact.py  user.py
app/models/: __init__.py  chat.py  contact.py  user.py
app/schemas/: __init__.py  chat.py  contact.py  user.py
app/websocket/: manager.py
tests/: test.py
